[package]
authors = ["Keith023"]
edition = "2018"
readme = "README.md"
name = "helloworldapp"
version = "0.1.1"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"

# this lets you use `cargo fix`!
[[bin]]
name = "helloworldapp"
test = false
bench = false
path = "src/helloworldapp.rs"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
